download js and css files

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <link rel="stylesheet" href="http://bootswatch.com/cosmo/bootstrap.min.css">
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="bootstrap.min.css">
+        <link href="font-awesome.min.css" rel="stylesheet">
         <title>Hackerspace Silesia</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <style>
