--- a/src/index.html
+++ b/src/index.html
@@ -1,208 +1,30 @@
 <html>
-    <head>
-        <title>Hackerspace Silesia</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <!-- bower:css -->
-        <!-- endbower -->
-        <link rel="stylesheet" href="css/style.min.css">
-    </head>
-    <body>
-        <div class='head-bg'>
-            <img src="assets/logo.png" class='center-block' />
-        </div>
-        {% include "templates/header.html" %}
-        <div class="container">
-          <div class="section" id='temp-about' style="display:block;">
-              <div class='row'>
-                  <div class="col-sm-6">
-                      <h3 class='text-center'>O nas</h3>
-                      <p><strong>Hackerspace</strong> jest to społeczność kreatywnych ludzi z różnych obszarów zainteresowań związanych z technologiami, którzy spotykają się w wspólnym miejscu, gdzie mogą tworzyć, integrować się oraz realizować zwariowane projekty.</p>
-
-                      <p><strong>Hackerspace Silesia</strong> tworzą ludzie z całego województwa śląskiego i nie tylko. Jeżeli chcesz zobaczyć co robimy, oraz jak działamy to zapraszamy Ciebie na nasze czwartkowe spotkania o godzinie 18.00.</p>
-                  </div>
-                  <div class="col-sm-5 col-sm-offset-1">
-                      <h3 class='text-center'>Aktualności</h3>
-                      <ul class='news'>
-                          <li>
-                              <a href='http://pajacyk.pl'>
-                                  <time>18 Dec 2014</time>
-                                  Socek atakuje 2: ostateczna bitwa
-                              </a>
-                          </li>
-                          <li>
-                              <a href='http://pajacyk.pl'>
-                                  <time>17 Dec 2014</time>
-                                  Socek atakuje
-                              </a>
-                          </li>
-                          <li>
-                              <a href='http://pajacyk.pl'>
-                                  <time>16 Dec 2014</time>
-                                  Socek atakuje
-                              </a>
-                          </li>
-                          <li>
-                              <a href='http://pajacyk.pl'>
-                                  <time>15 Dec 2014</time>
-                                  Socek atakuje
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-          <div class="section" id='temp-place'>
-              <div class='row'>
-                  <div class="col-sm-12">
-                      <h3 class='text-center'>Miejsce</h3>
-                  </div>
-              </div>
-              <div class='row'>
-                  <div class="col-sm-6">
-                      <p>Obecnie społeczność Hackerspace spotyka się co czwartki dzięki uprzejmości Biblioteki Śląskiej w Katowicach na <b>Ligonia 7/112.</b></p>
-                  </div>
-                  <div class="col-sm-6">
-                      <p>Trwają obecnie starania aby pozyskać lokal na Hackerspace z prawdziwego zdarzenia działający 24/7h. Możesz nam pomóc, przeczytaj powyżej o spotkaniu założycielskim Stowarzyszenia “Hackerspace Silesia”.</p>
-                      <p>(tutaj powinnien byc nie-firemarkowy tekst) nowy Lokal jest na <b>Ondraszka 17</b> również w Katowicach. Jest niestety w dość wczesnej fazie remontu.</p>
-                  </div>
-              </div>
-              <div class='row'>
-                  <div class="col-sm-6">
-                      <iframe style="float:center; width:100%; min-height:400px; border: 1px solid #aaa; margin-top: 20px;" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=19.016175,50.252206,19.019979,50.254552&amp;layer=mapnik&amp;marker=50.25331,19.01792" frameborder="0"></iframe>
-                  </div>
-                  <div class="col-sm-6">
-                      <iframe style="float:center; width:100%; min-height:400px; border: 1px solid #aaa; margin-top: 20px;" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=18.989964723587036%2C50.26337315454736%2C18.998183012008667%2C50.26771439397775&amp;layer=mapnik"></iframe>
-                  </div>
-              </div>
-          </div>
-          <div class="section" id='temp-community'>
-              <div class='row'>
-                  <div class="col-sm-12">
-                      <h3 class='text-center'>Społeczności</h3>
-                  </div>
-              </div>
-              <div class='row'>
-                  <div class="col-sm-6 col-md-4 text-center">
-                      <a class="well" href="http://pysilesia.org/">
-                          <img src="assets/pysilesia.png" alt="Pysilesia">
-                      </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4 text-center">
-                      <a class="well" href="https://www.facebook.com/meetjspl">
-                          <img src="assets/meetjs.jpg" alt="meet.js">
-                      </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4 text-center">
-                      <a class="well" href="http://??">
-                          <h3>Malinowy dżemik</h3>
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="section" id='temp-calendar'>
-              użyj wyobraźni :-)
-          </div>
-          <div class="section" id='temp-gallery'>
-              <div class='row'>
-                  <div class="col-sm-12">
-                      <h3 class='text-center'>Galeria</h3>
-                  </div>
-              </div>
-              <div class='row'>
-                  <div class="col-sm-12">
-                      <h3>Event #1</h3>
-                  </div>
-              </div>
-              <div class='row gallery-row'>
-                  <div class="col-sm-2">
-                      <img src="assets/img.jpg" alt='IMG' />
-                  </div>
-                  <div class="col-sm-2">
-                      <img src="assets/img.jpg" alt='IMG' />
-                  </div>
-                  <div class="col-sm-2">
-                      <img src="assets/img.jpg" alt='IMG' />
-                  </div>
-                  <div class="col-sm-2">
-                      <img src="assets/img.jpg" alt='IMG' />
-                  </div>
-                  <div class="col-sm-2">
-                      <img src="assets/img.jpg" alt='IMG' />
-                  </div>
-                  <div class="col-sm-2">
-                      <img src="assets/img.jpg" alt='IMG' />
-                  </div>
-              </div>
-              <div class='row'>
-                  <div class="col-sm-12">
-                      <h3>Event #2</h3>
-                  </div>
-              </div>
-              <div class='row gallery-row'>
-                  <div class="col-sm-2">
-                      <img src="assets/img.jpg" alt='IMG' />
-                  </div>
-                  <div class="col-sm-2">
-                      <img src="assets/img.jpg" alt='IMG' />
-                  </div>
-                  <div class="col-sm-2">
-                      <img src="assets/img.jpg" alt='IMG' />
-                  </div>
-                  <div class="col-sm-2">
-                      <img src="assets/img.jpg" alt='IMG' />
-                  </div>
-                  <div class="col-sm-2">
-                      <img src="assets/img.jpg" alt='IMG' />
-                  </div>
-                  <div class="col-sm-2">
-                      <img src="assets/img.jpg" alt='IMG' />
-                  </div>
-              </div>
-          </div>
-          <div class="section" id='temp-partners'>
-              tylko to samo co co społecznosci - inne obrazki (i byc moze podpisy)
-          </div>
-          <div class="section" id='temp-contact'>
-              <div class='row'>
-                  <div class="col-sm-12">
-                      <h3 class='text-center'>Kontakt</h3>
-                  </div>
-              </div>
-              <div class="row contact-row">
-                  <div class="col-lg-4">
-                      <h4>Grupa dyskusyjna</h4>
-                      <h4><a href="https://lists.hackerspace.pl/pipermail/silesia/">Archiwum</a></h4>
-                      <h4><a href="https://lists.hackerspace.pl/mailman/listinfo/silesia">Zapisz się na listę</a></h4>
-                      <br>
-                  </div>
-                  <div class="col-lg-4">
-                      <h4>IRC</h4>
-                      <h4><a href="http://webchat.freenode.net/?channels=#hackerspace-silesia">#hackerspace-silesia</a></h4>
-                      <h4><a href="https://botbot.me/freenode/hackerspace-silesia/">Logi</a></h4>
-                      <br>
-                  </div>
-                  <div class="col-lg-4">
-                      <h4>GitHub</h4>
-                      <h4><a href="https://github.com/hackerspace-silesia/">github.com/hackerspace-silesia</a></h4>
-                      <br>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col-lg-12">
-                      <p class='text-center'>
-                          <a href="https://www.facebook.com/HackerspaceSilesia"><i class="pull-left fa-facebook fa-2x"></i></a>
-                          <a href="https://twitter.com/hs_silesia"><i class="pull-left fa-twitter fa-2x"></i></a>
-                          <a href="https://plus.google.com/105433210692287375139" rel="publisher"><i class="pull-left fa-google-plus fa-2x"></i></a>
-                          <a href="mailto:silesia@lists.hackerspace.pl"><i class="pull-left fa-envelope fa-2x"></i></a>
-                          <a href="http://silesia.hackerspace.pl/feed.xml"><i class="pull-left fa-rss fa-2x"></i></a>
-                      </p>
-                  </div>
-              </div>
-          </div>
-        </div>
-        {% include 'templates/footer.html' %}
-        <!-- bower:js -->
-        <!-- endbower -->
-        <script src="js/scripts.min.js"></script>
-    </body>
+  <head>
+    <title>Hackerspace Silesia</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!-- bower:css -->
+    <!-- endbower -->
+    <link rel="stylesheet" href="css/style.min.css">
+  </head>
+  <body>
+    <div class="head-bg">
+      <img src="assets/logo.png" class="center-block" />
+    </div>
+    {% include "templates/header.html" %}
+    <div class="container" id="content-main">
+      {% include "templates/about.html" %}
+      {% include "templates/place.html" %}
+      {% include "templates/community.html" %}
+      {% include "templates/calendar.html" %}
+      {% include "templates/gallery.html" %}
+      {% include "templates/partners.html" %}
+      {% include "templates/contact.html" %}
+      {% include "templates/page.html" %}
+    </div>
+    {% include "templates/footer.html" %}
+    {% include "templates/loader.html" %}
+    <!-- bower:js -->
+    <!-- endbower -->
+    <script src="js/scripts.min.js"></script>
+  </body>
 </html>
