--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,6 @@
 <html>
   <head>
-    <title>Hackerspace Silesia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!-- bower:css -->
-    <!-- endbower -->
-    <link rel="stylesheet" href="css/style.min.css">
+    {% include "templates/head.html" %}
   </head>
   <body>
     <div class="head-bg">
