DURR DERP WURDPREZZ

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     {% include "templates/head.html" %}
+    <!-- bower:css -->
+    <!-- endbower -->
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <div class="head-bg">
